--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="System.Data.SQLite" Version="1.0.109.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
   </ItemGroup>
     
   <ItemGroup>
