--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -39,12 +39,16 @@
     "@angular/platform-browser": "^7.0.1",
     "@angular/platform-browser-dynamic": "^7.0.1",
     "@angular/router": "^7.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@types/bootstrap": "^4.1.2",
+    "core-js": "^2.5.4",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "0.2.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "3.0.0",
     "jasmine-core": "^3.3.0",
+    "jquery": "^3.3.1",
     "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
@@ -53,7 +57,6 @@
     "merge-stream": "1.0.1",
     "rimraf": "^2.6.1",
     "rxjs": "^6.3.3",
-    "core-js": "^2.5.4",
     "systemjs": "^0.19.40",
     "zone.js": "^0.8.26"
   },
