closed #9, moved analysis logic to domain layer

--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -138,5 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\app\" />
+    <Folder Include="Domain\" />
   </ItemGroup>
 </Project>
