--- a/DriverTracker/appsettings.json
+++ b/DriverTracker/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DriverTrackerIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DriverTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
