#2 finished adding authorizations, admin user

--- a/DriverTracker/appsettings.json
+++ b/DriverTracker/appsettings.json
@@ -7,5 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DriverTrackerIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DriverTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AdminUser":  {
+    "UserName": "admin@example.com",
+    "Email":  "admin@example.com",
+    "Password": "akls;f3W8"
   }
 }
