--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -110,4 +110,7 @@
     <Folder Include="wwwroot\app\" />
     <Folder Include="Domain\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="DriverTracker.csproj" />
+  </ItemGroup>
 </Project>
