--- a/DriverTracker/appsettings.json
+++ b/DriverTracker/appsettings.json
@@ -12,5 +12,9 @@
     "UserName": "admin@example.com",
     "Email":  "admin@example.com",
     "Password": "akls;f3W8"
+  },
+  "GeocodingProviders": {
+    "Provider": "Google",
+    "ApiKey": ""
   }
 }
