added Angular service to make company statistics  update without requiring browser refresh

--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -27,6 +27,7 @@
     <Compile Remove="Migrations\DriverIdentity\20181106003846_CreateIdentityTables.cs" />
     <Compile Remove="Areas\Identity\Data\DriverIdentityContext.cs" />
     <Compile Remove="Areas\Identity\Data\MvcDataContext.cs" />
+    <Compile Remove="Domain\CompanyStatisticResults.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\lib\bootstrap\.bower.json" />
