#22 added geocoding API

--- a/DriverTracker/appsettings.json
+++ b/DriverTracker/appsettings.json
@@ -14,7 +14,7 @@
     "Password": "akls;f3W8"
   },
   "GeocodingProviders": {
-    "Provider": "Google",
+    "Provider": "OpenStreetMap",
     "ApiKey": ""
   }
 }
