#22 added location clustering functionality. Next step is to use location clustering decisions with logistic regression to determine ridership probability

--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Geocoding.Microsoft" Version="4.0.1" />
     <PackageReference Include="Geocoding.Yahoo" Version="4.0.1" />
     <PackageReference Include="Accord.Statistics" Version="3.8.0" />
+    <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
   </ItemGroup>
     
   <ItemGroup>
