--- a/DriverTracker.Tests/DriverTracker.Tests.csproj
+++ b/DriverTracker.Tests/DriverTracker.Tests.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
