Added new authorization rules to controllers.
The role permissions are now as follows:
 * Admin can view, create, update, or delete any records.
 * Analyst can view, create, or update records but cannot delete them.
 * A Driver can only view, create, or update records pertaining to him/her.

Also made some slight tweaks to page layout and format.

--- a/DriverTracker/DriverTracker.csproj
+++ b/DriverTracker/DriverTracker.csproj
@@ -29,6 +29,7 @@
     <Compile Remove="Areas\Identity\Data\DriverIdentityContext.cs" />
     <Compile Remove="Areas\Identity\Data\MvcDataContext.cs" />
     <Compile Remove="Domain\CompanyStatisticResults.cs" />
+    <Compile Remove="Domain\GeographicDistance.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\lib\bootstrap\.bower.json" />
@@ -121,6 +122,7 @@
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\CookieConsent\" />
+    <Folder Include="Authorization\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DriverTracker.csproj" />
