--- a/DriverTracker/appsettings.json
+++ b/DriverTracker/appsettings.json
@@ -26,5 +26,11 @@
   "GeocodingProviders": {
     "Provider": "OpenStreetMap",
     "Key": "KEY"
+  },
+  "APITokens": {
+    "Key": "ri&X$UlbXjl!8O3s5uWH",
+    "Audience": "https://localhost:5001",
+    "Issuer": "https://localhost:5000",
+    "Lifetime": "36000"
   }
 }
