--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -30,17 +30,18 @@
   },
   "homepage": "https://github.com/dmnisson/drivertracker#readme",
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
+    "@angular/animations": "^7.2.6",
+    "@angular/common": "^7.2.6",
+    "@angular/compiler": "^7.2.6",
+    "@angular/core": "^7.2.6",
+    "@angular/forms": "^7.2.6",
+    "@angular/http": "^7.2.6",
+    "@angular/platform-browser": "^7.2.6",
+    "@angular/platform-browser-dynamic": "^7.2.6",
+    "@angular/router": "^7.2.6",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/bootstrap": "^4.2.0",
+    "ajv": "^6.9.2",
     "core-js": "^2.6.1",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
@@ -49,9 +50,9 @@
     "gulp-uglify": "3.0.0",
     "jasmine-core": "^3.3.0",
     "jquery": "^3.3.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
+    "karma-jasmine": "^2.0.1",
     "merge-stream": "1.0.1",
     "rimraf": "^2.6.3",
     "rxjs": "^6.3.3",
@@ -61,18 +62,15 @@
   "devDependencies": {
     "@angular-devkit/build-angular": ">=0.11.4",
     "@angular/cli": "^7.0.7",
-    "@angular/compiler-cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
