--- a/DriverTracker.Mobile.Droid/DriverTracker.Mobile.Droid.csproj
+++ b/DriverTracker.Mobile.Droid/DriverTracker.Mobile.Droid.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PickupRequestsActivity.cs" />
+    <Compile Include="AndroidAuthenticationService.cs" />
+    <Compile Include="BypassHostnameVerifier.cs" />
+    <Compile Include="BypassSslValidationClientHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
