--- a/DriverTracker.Mobile/DriverTracker.Mobile.csproj
+++ b/DriverTracker.Mobile/DriverTracker.Mobile.csproj
@@ -31,6 +31,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConnection.cs" />
     <Compile Include="IAuthenticationService.cs" />
+    <Compile Include="IServerConnectionStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
