--- a/DriverTracker.Mobile/packages.config
+++ b/DriverTracker.Mobile/packages.config
@@ -5,6 +5,9 @@
   <package id="Microsoft.NETCore.Targets" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="runtime.native.System" version="4.3.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="sqlite-net-pcl" version="1.5.231" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
