--- a/DriverTracker.Mobile/packages.config
+++ b/DriverTracker.Mobile/packages.config
@@ -4,6 +4,9 @@
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.NETCore.Targets" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Portable.BouncyCastle" version="1.8.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Portable.JWT" version="1.0.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="runtime.native.System" version="4.3.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="sqlite-net-pcl" version="1.5.231" targetFramework="portable45-net45+win8+wpa81" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="portable45-net45+win8+wpa81" />
