Added activity code for choosing the server. Also removed some async voids.

--- a/DriverTracker.Mobile.Droid/DriverTracker.Mobile.Droid.csproj
+++ b/DriverTracker.Mobile.Droid/DriverTracker.Mobile.Droid.csproj
@@ -67,6 +67,11 @@
     <Compile Include="BypassSslValidationClientHandler.cs" />
     <Compile Include="AndroidServerConnectionStore.cs" />
     <Compile Include="AuthenticateActivity.cs" />
+    <Compile Include="ChooseServerActivity.cs" />
+    <Compile Include="ChooseStoredServerActivity.cs" />
+    <Compile Include="TaskUtilities.cs" />
+    <Compile Include="IErrorHandler.cs" />
+    <Compile Include="LogErrorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
