--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -51,7 +51,7 @@
     "gulp-typescript": "^5.0.0",
     "gulp-uglify": "3.0.0",
     "jasmine-core": "^3.3.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^2.0.1",
@@ -62,8 +62,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": ">=0.11.4",
-    "@angular/cli": "^7.0.7",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^2.8.14",
@@ -71,7 +71,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
