* Removed async voids * added some awaiting where async methods were called synchronously * Other minor syntax improvements

--- a/DriverTracker.Mobile/DriverTracker.Mobile.csproj
+++ b/DriverTracker.Mobile/DriverTracker.Mobile.csproj
@@ -67,6 +67,9 @@
     <Reference Include="JWT">
       <HintPath>..\packages\Portable.JWT.1.0.5\lib\portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10\JWT.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Android">
+      <HintPath>..\..\..\..\..\Library\Frameworks\Xamarin.Android.framework\Versions\9.2.3-0\lib\xamarin.android\xbuild-frameworks\MonoAndroid\v8.1\Mono.Android.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
