--- a/DriverTracker.Mobile/DriverTracker.Mobile.csproj
+++ b/DriverTracker.Mobile/DriverTracker.Mobile.csproj
@@ -32,6 +32,7 @@
     <Compile Include="ServerConnection.cs" />
     <Compile Include="IAuthenticationService.cs" />
     <Compile Include="IServerConnectionStore.cs" />
+    <Compile Include="IServerConnectionStoreFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
