--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -51,6 +51,7 @@
     "jwt-decode": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^2.0.1",
+    "lodash": "^4.17.15",
     "merge-stream": "1.0.1",
     "popper.js": "^1.15.0",
     "querystringify": "^2.1.1",
