--- a/DriverTracker.Server/Properties/launchSettings.json
+++ b/DriverTracker.Server/Properties/launchSettings.json
@@ -1,23 +1,26 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:24312",
-      "sslPort": 44335
+      "applicationUrl": "http://localhost:27637",
+      "sslPort": 44305
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DriverTracker": {
+    "DriverTracker.Server": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
