--- a/DriverTracker.Server/DriverTracker.Server.csproj
+++ b/DriverTracker.Server/DriverTracker.Server.csproj
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <Folder Include="Areas\" />
     <Folder Include="Authorization\" />
     <Folder Include="Domain\" />
     <Folder Include="Migrations\" />
@@ -33,4 +32,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
+    <Content Remove="Areas\Identity\Pages\_ViewImports.cshtml" />
+    <Content Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
+    <Content Remove="Areas\Identity\Pages\Account\_ViewImports.cshtml" />
+    <Content Remove="Areas\Identity\Pages\Account\Login.cshtml" />
+    <Content Remove="Areas\Identity\Pages\Account\Logout.cshtml" />
+  </ItemGroup>
 </Project>
