--- a/DriverTracker.Server/DriverTracker.Server.csproj
+++ b/DriverTracker.Server/DriverTracker.Server.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Models\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
