--- a/DriverTracker.Client/drivertracker/package.json
+++ b/DriverTracker.Client/drivertracker/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
