driver details component

--- a/DriverTracker.Server/Properties/launchSettings.json
+++ b/DriverTracker.Server/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "DriverTracker.Server": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "/",
+      "launchUrl": "http://localhost:4200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
