upgrade angular core/cli to version 8

--- a/DriverTracker/tsconfig.json
+++ b/DriverTracker/tsconfig.json
@@ -5,14 +5,15 @@
   ],
   "compilerOptions": {
     "baseUrl": "./",
+    "downlevelIteration": true,
     "outDir": "./wwwroot/",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
