--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -30,26 +30,26 @@
   },
   "homepage": "https://github.com/dmnisson/drivertracker#readme",
   "dependencies": {
-    "@angular/animations": "^10.2.5",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/router": "^10.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@angular/animations": "^11.2.14",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@types/bootstrap": "^4.2.0",
     "ajv": "^6.9.2",
     "bootstrap": "^4.3.1",
     "braces": "^2.3.2",
     "clean-css": "^4.2.1",
     "core-js": "^2.6.1",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "~3.6.0",
     "jquery": "^3.5.0",
     "jwt-decode": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^2.0.1",
+    "karma-jasmine": "~4.0.0",
     "lodash": "^4.17.21",
     "merge-stream": "1.0.1",
     "popper.js": "^1.15.0",
@@ -57,32 +57,32 @@
     "rimraf": "^2.6.3",
     "rxjs": "^6.6.7",
     "systemjs": "^0.19.47",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "^10.2.5",
-    "@types/jasmine": "^2.8.14",
+    "@angular-devkit/build-angular": "~0.1102.13",
+    "@angular/cli": "^11.2.13",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "4.0.2",
     "gulp-typescript": "^5.0.0",
     "gulp-uglify": "3.0.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "^6.3.2",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "node-sass": "^4.13.1",
-    "protractor": "^5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "~6.1.3",
     "typescript": "^4.0.7"
   }
 }
